server/src/analysis/workspace/snapshots/janet_zed_server__analysis__workspace__tests__a_declaration_beside_a_module_stands_over_what_is_inferred.snap
---
source: server/src/analysis/workspace/tests.rs
assertion_line: 444
expression: "format!(\"----- INFERRED\\n{before}\\n{by_importer}\\n\\n----- DECLARED BESIDE\\n{}\\n{}\\n\",\nhover(&workspace, \"/ws/report.janet\", \"shapes/area\"),\ninferred(&workspace, \"/ws/report.janet\"),)"
---
----- INFERRED
```janet
(area shape: {:kind :any :r :number :w :number :h :number & r}) -> :number
throws :string
```
defn in `shapes.janet`
total-area: (fn [(or [{:kind :any :r :number :w :number :h :number & r}] @[{:kind :any :r :number :w :number :h :number & r}])] :number)

----- DECLARED BESIDE
```janet
(area shape: :table) -> :string
```
defn in `shapes.janet`
total-area: (fn [(or [:table] @[:table])] :number)
