server/src/analysis/workspace/snapshots/janet_zed_server__analysis__workspace__tests__a_dependency_is_inferred_once_a_session.snap
---
source: server/src/analysis/workspace/tests.rs
expression: shown
---
```janet
(encode x) -> :string
```
defn in `json.janet`
