server/src/analysis/workspace/snapshots/janet_zed_server__analysis__workspace__tests__an_edit_reaches_the_files_that_import_it.snap
---
source: server/src/analysis/workspace/tests.rs
expression: "format!(\"----- BEFORE\\n{before}\\n\\n----- AFTER\\n{}\\n\",\nhover(&workspace, \"/ws/report.janet\", \"shapes/area\"))"
---
----- BEFORE
```janet
(area shape: {:kind :any :r :number :w :number :h :number & r}) -> :number
throws :string
```
defn in `shapes.janet`

----- AFTER
```janet
(area shape: {:kind :any :r :number & r}) -> (or :number :string)
throws :string
```
defn in `shapes.janet`
