server/src/analysis/workspace/snapshots/janet_zed_server__analysis__workspace__tests__import_of_a_missing_file.snap
---
source: server/src/analysis/workspace/tests.rs
expression: show_graph(&workspace)
---
----- SOURCE CODE
-- /ws/a.janet
(import ./b :as bee)
(bee/f)

----- MODULE GRAPH
