server/src/analysis/workspace/snapshots/janet_zed_server__analysis__workspace__tests__inline_declarations_win_over_files_and_exports.snap
---
source: server/src/analysis/workspace/tests.rs
expression: "format!(\"----- EXPORTED\\n{exported}\\n\\n----- WORKSPACE FILE\\n{ambient}\\n\\n----- INLINE\\n{}\\n\",\nshown(&workspace))"
---
----- EXPORTED
(lib/render thing: Thing) -> :string
```janet
(lib/render thing: Thing) -> :string
```
declared in `lib.d.janet`

How a thing reads.

----- WORKSPACE FILE
(lib/render thing) -> :number
```janet
(lib/render thing) -> :number
```
declared in `ambient.d.janet`

----- INLINE
(lib/render thing) -> :boolean
```janet
(lib/render thing) -> :boolean
```
declared in `main.janet`
